--- a/java_api/src/main/resources/application.properties
+++ b/java_api/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.password=password
 #   DATABASE CONFIG - GLOBAL OPTION #2 (DOCKERIZED MYSQL) - CURRENTLY SELECTED                                         #
 #----------------------------------------------------------------------------------------------------------------------#
 
-spring.datasource.url=jdbc:mysql://database:3306/basex
+spring.datasource.url=jdbc:mysql://localhost:3306/basex
 
 ########################################################################################################################
 #   DATABASE CONFIG - INITIALIZATION OPTIONS (SEE https://www.baeldung.com/spring-boot-data-sql-and-schema-sql)        #
