--- a/java_api/src/main/resources/application.properties
+++ b/java_api/src/main/resources/application.properties
@@ -27,8 +27,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/basex
 #   DATABASE CONFIG - INITIALIZATION OPTION #1 (AUTO - HIBERNATE)                                                      #
 #----------------------------------------------------------------------------------------------------------------------#
 
+# TODO Set to =update for production
 ## Set Hibernate DDL generation (create, update, create-drop, validate or none)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 #----------------------------------------------------------------------------------------------------------------------#
 #   DATABASE CONFIG - INITIALIZATION OPTION #2 (MIXED - HIBERNATE AND SQL SCRIPTS) - CURRENTLY SELECTED                #
