--- a/java_api/src/main/resources/application.properties
+++ b/java_api/src/main/resources/application.properties
@@ -27,9 +27,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/basex
 #   DATABASE CONFIG - INITIALIZATION OPTION #1 (AUTO - HIBERNATE)                                                      #
 #----------------------------------------------------------------------------------------------------------------------#
 
-# TODO Set to =update for production
 ## Set Hibernate DDL generation (create, update, create-drop, validate or none)
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
 
 #----------------------------------------------------------------------------------------------------------------------#
 #   DATABASE CONFIG - INITIALIZATION OPTION #2 (MIXED - HIBERNATE AND SQL SCRIPTS) - CURRENTLY SELECTED                #
@@ -43,13 +42,14 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 # Set Hibernate DDL generation (create, update, create-drop or validate)
 #spring.jpa.hibernate.ddl-auto=update
-
 #----------------------------------------------------------------------------------------------------------------------#
 #   DATABASE CONFIG - INITIALIZATION OPTION #3 (MANUAL - SQL SCRIPTS ONLY)                                             #
 #----------------------------------------------------------------------------------------------------------------------#
 
 ## Enable script-based initialization:
-#spring.sql.init.mode=always
+spring.sql.init.mode=always
 #
 ## Disable Hibernate initialization:
-#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
+
+
