added Bearer token and hardcoded users

--- a/java_api/src/main/resources/application.properties
+++ b/java_api/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 server.port=8080
 
 ########################################################################################################################
+#   JWT Configs
+########################################################################################################################
+spring.app.jwtSecret = jwtSecretkfdmlefasjdakjwjdadwadawasdasda3w2a
+spring.app.jwtExpirationMs = 800000
+
+########################################################################################################################
 #   DATABASE CONFIG - GLOBAL                                                                                           #
 ########################################################################################################################
 
@@ -53,3 +59,13 @@ spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=update
 
 
+########################################################################################################################
+#   DEBUGGING TOOLS
+########################################################################################################################
+
+#logging.level.org.springframework=DEBUG
+#logging.level.org.hibernate.SeL=DEBUG
+#logging.level.org.springframework.security=DEBUG
+
+######## Add the path to the folder/ package you want to debug:
+#logging.level.com.basex.security=DEBUG
