small code changes

--- a/java_api/src/main/resources/application.properties
+++ b/java_api/src/main/resources/application.properties
@@ -47,7 +47,7 @@ spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
 # Set Hibernate DDL generation (create, update, create-drop or validate)
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 #----------------------------------------------------------------------------------------------------------------------#
 #   DATABASE CONFIG - INITIALIZATION OPTION #3 (MANUAL - SQL SCRIPTS ONLY)                                             #
 #----------------------------------------------------------------------------------------------------------------------#
@@ -71,12 +71,13 @@ spring.jpa.defer-datasource-initialization=true
 #logging.level.com.basex.security=DEBUG
 
 ########################################################################################################################
-#   CODE EXAMPLE - In addition to the changes above at point 2 added by me
+#   CODE EXAMPLE - In addition to the changes above at point 2 - added by Paul
 ########################################################################################################################
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+### VIEW SQL queries in console
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+### Recommended for database connectivity and SQL generation
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
