--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,9 +1,8 @@
 # Use an official Node.js runtime as a parent image
-FROM node:18-alpine  
-# or node:18 if alpine is not necessary
+FROM node:18-alpine
 
 # Set the working directory inside the container
-WORKDIR /nodejs_api
+WORKDIR /client
 
 # Copy package.json and package-lock.json (if available)
 COPY package*.json ./
@@ -15,7 +14,7 @@ RUN npm install --legacy-peer-deps
 COPY . .
 
 # Expose the port the app runs on
-EXPOSE 5000
+EXPOSE 3000
 
 # Define the command to start the app
-CMD [ "npm", "run", "dev"]
+CMD [ "npm", "start" ]
