--- a/nodejs_api/.env
+++ b/nodejs_api/.env
@@ -1,3 +1,6 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/base-x
+# Connection string for local MongoDB
+MONGO_URI_LOCAL=mongodb://localhost:27017/base-x
+# Connection string for Docker MongoDB
+MONGO_URI_DOCKER=mongodb://root:admin@mongo-db:27017/
 JWT_SECRET=baseX-nodejs-api
