refactor docker config and auth register on nodejs_api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,35 @@
 ########################################################################################################################
 #                                  FILE CONFIG - GLOBAL: DATABASE OUTSIDE DOCKER CONTAINER
 # * `docker-compose up --build -d` (create/start containers)
-# * 'docker-compose down -v' (to perm delete DB we need to delete docker + its volumes: )
+# * 'docker-compose down -v' (perm delete DB from Docker)
 ########################################################################################################################
 
 services:
-  ### Java API
-  # java-api:
-  #   build:
-  #     context: ./java_api             # Specify the path to the Java API directory
-  #   image: java-basex-api:latest      # Name of the resulting image
-  #   container_name: java-api          # Name of the resulting container
-  #   ports:                            # External/internal port mapping:
-  #     - 8080:8080
-  #   depends_on:                       # Service(s) that this service depends on:
-  #     java-api-db:
-  #         condition: service_healthy  # Ensure the database is healthy before starting this service
+####################################################### Java API #######################################################
+  basex-api-app:
+    build: .                          # Use Dockerfile to build image
+    image: basex-api:latest           # Name of the resulting image
+    container_name: application       # Name of the resulting container
+    ports:                            # External/internal port mapping:
+      - 8080:8080
+    depends_on:                       # Service(s) that this service depends on:
+      basex-api-db:
+        condition: service_healthy
 
-  # java-api-db:
-  #   image: mysql:latest               # Use the official MySQL image
-  #   container_name: java-MySQL        # Name of the MySQL container
-  #   environment:                      # Environment variables for the MySQL container
-  #     - MYSQL_DATABASE=basex          # Set the name of the default database
-  #     - MYSQL_ROOT_PASSWORD=password  # Set the root password
-  #   healthcheck:                      # Command that checks if the MySQL container is healthy
-  #     test: [ "CMD", "echo", "MySQL database container is healthy" ]
-  #   ports:
-  #     - "3306:3306"                   # External/internal port mapping for MySQL
-  #   volumes:
-  #     - mysql_data:/var/lib/mysql     # Volume for MySQL data persistence
+  basex-api-db:
+    image: mysql:latest               # Image used to create container (from Docker registry)
+    container_name: database
+    environment:                      # Environment variables for the service (container):
+      - MYSQL_ROOT_PASSWORD=password
+      - MYSQL_DATABASE=basex
+    healthcheck:                      # Command that, when ran, proves service (container) is healthy
+      test: [ "CMD", "echo", "MySQL database container is healthy" ]
+    ports:
+      - "3306:3306"
+    volumes:
+      - db:/var/lib/mysql
 
-  ### NodeJS API
+####################################################### NodeJS API ####################################################
   nodejs-api:
     build:
       context: ./nodejs_api           # Specify the path to the Node.js API directory
@@ -66,13 +65,13 @@ services:
     image: basex-client:latest        # Name of the resulting image
     container_name: client-basex      # Name of the resulting container
     ports:
-      - 3000:3000                     # External/internal port mapping for the React development server
+      - 3010:3010                     # External/internal port mapping for the React development server
     command: npm start                # Command to start the React development server
     depends_on:                       # Ensure the API is up before starting the frontend
       - nodejs-api                    # Correct service name (nodejs-api)
 
 volumes:
-  # mysql_data:                       # Volume for MySQL data
+  db:                                 # Volume for MySQL data
   mongodb_data:                       # Volume for MongoDB data
 
 ########################################################################################################################
