fix client ports for docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,28 +6,28 @@
 
 services:
 ####################################################### Java API #######################################################
-  basex-api-app:
-    build: .                          # Use Dockerfile to build image
-    image: basex-api:latest           # Name of the resulting image
-    container_name: application       # Name of the resulting container
-    ports:                            # External/internal port mapping:
-      - 8080:8080
-    depends_on:                       # Service(s) that this service depends on:
-      basex-api-db:
-        condition: service_healthy
+  # basex-api-app:
+  #   build: .                          # Use Dockerfile to build image
+  #   image: basex-api:latest           # Name of the resulting image
+  #   container_name: application       # Name of the resulting container
+  #   ports:                            # External/internal port mapping:
+  #     - 8080:8080
+  #   depends_on:                       # Service(s) that this service depends on:
+  #     basex-api-db:
+  #       condition: service_healthy
 
-  basex-api-db:
-    image: mysql:latest               # Image used to create container (from Docker registry)
-    container_name: database
-    environment:                      # Environment variables for the service (container):
-      - MYSQL_ROOT_PASSWORD=password
-      - MYSQL_DATABASE=basex
-    healthcheck:                      # Command that, when ran, proves service (container) is healthy
-      test: [ "CMD", "echo", "MySQL database container is healthy" ]
-    ports:
-      - "3306:3306"
-    volumes:
-      - db:/var/lib/mysql
+  # basex-api-db:
+  #   image: mysql:latest               # Image used to create container (from Docker registry)
+  #   container_name: database
+  #   environment:                      # Environment variables for the service (container):
+  #     - MYSQL_ROOT_PASSWORD=password
+  #     - MYSQL_DATABASE=basex
+  #   healthcheck:                      # Command that, when ran, proves service (container) is healthy
+  #     test: [ "CMD", "echo", "MySQL database container is healthy" ]
+  #   ports:
+  #     - "3306:3306"
+  #   volumes:
+  #     - db:/var/lib/mysql
 
 ####################################################### NodeJS API ####################################################
   nodejs-api:
@@ -65,7 +65,7 @@ services:
     image: basex-client:latest        # Name of the resulting image
     container_name: client-basex      # Name of the resulting container
     ports:
-      - 3010:3010                     # External/internal port mapping for the React development server
+      - 3000:3000                     # External/internal port mapping for the React development server
     command: npm start                # Command to start the React development server
     depends_on:                       # Ensure the API is up before starting the frontend
       - nodejs-api                    # Correct service name (nodejs-api)
