--- a/java_api/src/main/resources/application.properties
+++ b/java_api/src/main/resources/application.properties
@@ -13,17 +13,21 @@ spring.app.jwtExpirationMs = 800000
 spring.datasource.username=root
 spring.datasource.password=password
 
-#----------------------------------------------------------------------------------------------------------------------#
-#   DATABASE CONFIG - GLOBAL OPTION #1 (NATIVE MYSQL)                                                                  #
-#----------------------------------------------------------------------------------------------------------------------#
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/memberships?createDatabaseIfNotExist=true
+########################################################################################################################
+#   DATABASE CONFIG - DATABASE URL       #
+########################################################################################################################
 
 #----------------------------------------------------------------------------------------------------------------------#
-#   DATABASE CONFIG - GLOBAL OPTION #2 (DOCKERIZED MYSQL) - CURRENTLY SELECTED                                         #
+#   DATABASE CONFIG #1 - GLOBAL OPTION #1 (DOCKER)                                                                  #
 #----------------------------------------------------------------------------------------------------------------------#
 
-spring.datasource.url=jdbc:mysql://localhost:3306/basex
+spring.datasource.url=jdbc:mysql://basex-api-db:3306/basex
+
+#----------------------------------------------------------------------------------------------------------------------#
+#   DATABASE CONFIG #2 - GLOBAL OPTION #2 (LOCAL HOST)                                     #
+#----------------------------------------------------------------------------------------------------------------------#
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/basex
 
 ########################################################################################################################
 #   DATABASE CONFIG - INITIALIZATION OPTIONS (SEE https://www.baeldung.com/spring-boot-data-sql-and-schema-sql)        #
